# pygas

./: README.md  example.noe  flake8  net.html  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
app/adapters/api/: pyvis_visu.py
app/adapters/spi/: carpathe_repo.py  json_repo.py  mocabio.py
app/domain/: repository.py
app/domain/commands/: base.py  computation.py
app/domain/model/: edge.py  gas.py  gas_network.py  link.py  network.py  node.py  pipe_material.py  sector.py  solver.py
app/domain/ports/: viewer.py
app/entrypoints/: cli.py
pygas/: main.py
pygas/model/: edge.py  network.py  node.py
pygas/solver/: solver.py
requirements/: dev.txt  prod.txt  test.txt
tests/: conftest.py
tests/adapters/: test_carpathe_interface.py  test_pyvis_viewer.py
tests/data/: example.can
tests/domain/: test_basic_elements.py  test_edge.py  test_gas.py  test_link.py  test_network.py  test_node.py
tests/use_cases/: network.py  test_network.py
