# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pygas
description = A gas network computing algorithm in Python.
author = Guillaume Ruiz
author-email = contact.gruiz@gmail.com
version = 1.0.0
license = mit
long-description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ziurg/pygas
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python
    License :: Free for non-commercial use
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
